--- a/CSS/Qui_suis_je.css
+++ b/CSS/Qui_suis_je.css
@@ -5,18 +5,25 @@
 	height:100vh;
 	align-items:center;
 	display :flex;
+	color:black;
+	
 	
 }
+
 #infos {
 	border : 5px solid black;
 }
+
 #adresse {
 	text-align :center;
 	margin-left:25%;
 	margin-right:25%;
 }
+
 #tabperso {
 	margin-left:-9px;
 	margin-right:-10px;
 }
+
+
 
