--- a/CSS/Realisations.css
+++ b/CSS/Realisations.css
@@ -10,10 +10,13 @@
 	width:50%;
 	margin-left:25%;
 	margin-right:25%;
+	background-color: #853894;
 }
 hr {
 	margin-left:25%;
 	margin-right:25%;
+	height: 2px;
+	background-color: #0c8038;
 }
 .lienprojet {
 	
