Check contact and skills

--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -1,3 +1,17 @@
-#contact {
-padding-top:65px;
+
+
+#espace{
+    height: 30px;
+    
+}
+
+.contact{
+    height:45vh;
+    width: 100%;
+
+}
+
+hr{
+    
+    
 }
