--- a/CSS/Qui_suis_je.css
+++ b/CSS/Qui_suis_je.css
@@ -11,9 +11,10 @@
 }
 
 #presentation {
-	background-color:#FC7F3C;
+	background-color:#FF140C;
 	margin-left:-8px;
 	margin-right:-8px;
+	margin-bottom: -8px;
 }
 
 
