--- a/CSS/Realisations.css
+++ b/CSS/Realisations.css
@@ -10,7 +10,7 @@
 	width:50%;
 	margin-left:25%;
 	margin-right:25%;
-	
+	border-collapse: collapse;
 }
 hr {
 	margin-left:25%;
@@ -19,10 +19,27 @@ hr {
 	background-color: black;
 }
 
+.btn {
+	height:35px;
+	width: 130px;
+	margin-top: 3px;
+}
 
+.link {
+	text-decoration: none;
+}
+
+body {
+	background-color: #853894;
+}
 .cell {
 width:50%;
+background-color: white;
+
 }
+
+
+
 #ML {
 	display:flex;
 	justify-content:center;
