--- a/CSS/competences.css
+++ b/CSS/competences.css
@@ -1,24 +1,52 @@
 #competence-gen{
     height : 90vh;
     text-align: center;
-   
-    
+    background-color: green;
+    margin-left: -8px;
+    margin-right: -8px;
+    margin-bottom: -22px;
 }
 
 #competence-dev{
     height : 90vh;
     text-align: center;
-    
+    background-color: green;
+    margin-left: -8px;
+    margin-right: -8px;
+    margin-bottom: -22px;
 }
 
 #competence-res{
     height : 90vh;
     text-align: center;
+    background-color: green;
+    margin-left: -8px;
+    margin-right: -8px;
     
 }
 
+table {
+    margin-left: 25%;
+    margin-right: 25%;
+    border:4px solid #641A02;
+    border-collapse: collapse;
+    
+}
+
+.cell {
+    text-align: left;
+    border:4px solid #641A02;
+}
+
+.other-cell {
+    border-right: 4px solid #641A02;
+}
 
 #espace{
     height: 30px;
     
+}
+
+td {
+    background-color:#84D41D;
 }
