--- a/CSS/Veille_technologique.css
+++ b/CSS/Veille_technologique.css
@@ -1,30 +1,46 @@
-#vt {
-padding-top:65px;
+hr {
+	margin-left:25%;
+	margin-right:25%;
+	height: 2px;
+	background-color: black;
 }
 
-.def {
-list-style:none;
-}
-
-.article {
-text-align:justify;
-}
-
-#ML {
-	display:flex;
-	justify-content:center;
-	align-items:center;
-	height:80px;
-	margin-left:-8px;
-	margin-right:-8px;
-	margin-bottom:-20px;
-	background-color:gold;
+#article {
+	padding-top:65px;
 	
 }
-#ml {
-	text-decoration:none;
-	color:black;
+.ligne {
+	height :150px;
+	
 }
-.veille {
-	width: 50%;
+
+.link {
+	text-decoration: none;
+}
+
+.cell {
+	width:50%;
+	background-color: #5EB6DD;
+	color:white;
+}
+
+.tab {
+	width:50%;
+	margin-left:25%;
+	margin-right:25%;
+	border-collapse: collapse;
+}
+
+.btn {
+	height:35px;
+	width: 130px;
+	margin-top: 3px;
+}
+
+body {
+	background-color: #132959;
+}
+
+#bottom {
+	margin-top:57vh;
 }
