--- a/CSS/main_project.css
+++ b/CSS/main_project.css
@@ -2,10 +2,21 @@
     margin-left:-8px;
 	margin-right:-8px;
 	margin-bottom: -8px;
+	background-color: #FC7F3C;
 }
 
 #description {
     text-align : justify;
+	margin-left:25%;
+	margin-right:25%;
+	height:100vh;
+	align-items:center;
+	display :flex;
+	color:black;
+}
+
+#article {
+	text-align : justify;
 	margin-left:25%;
 	margin-right:25%;
 	height:100vh;
