--- a/CSS/Qui_suis_je.css
+++ b/CSS/Qui_suis_je.css
@@ -11,7 +11,7 @@
 }
 
 #presentation {
-	background-color:#FF140C;
+	background-color:#f74b46;
 	margin-left:-8px;
 	margin-right:-8px;
 	margin-bottom: -8px;
