--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -1,23 +1,36 @@
-
-
-#espace{
-    height: 55px;
+#espace {
+    margin-left: -8px;
+    margin-right: -8px;
     
 }
 
 
-
-#top {
+#linkedin {
+    justify-content: center;
+	align-items: center;
+	display: flex;
+    height: 256px;
     
-    text-align: center;
-    border: 5px solid black;
+    background-color: #132959;
 }
 
+#mail {
+    padding-top: 65px;
+    margin-top: 5px;
+    justify-content: center;
+	align-items: center;
+	display: flex;
+    height: 256px;
+    
+    background-color: #132959;
+}
 
 
 #choix {
-    width:100%;
+    
     background-color: black;
+    margin-bottom: -16px;
+    margin-top: -16px;
     
 }
 
@@ -27,10 +40,16 @@
 }
 
 p {
-    vertical-align: center;
+    color:#5EB6DD;
 }
 
-body{
-    margin:0px;
-    padding:0px;
+
+
+#black {
+    color:black;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
