--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -11,7 +11,7 @@
 	display: flex;
     height: 256px;
     
-    background-color: #132959;
+    background-color: #FC7F3C;
 }
 
 #mail {
@@ -22,7 +22,7 @@
 	display: flex;
     height: 256px;
     
-    background-color: #132959;
+    background-color: #FC7F3C;
 }
 
 
@@ -40,7 +40,7 @@
 }
 
 p {
-    color:#5EB6DD;
+    color:rgb(160, 0, 0);
 }
 
 
@@ -51,5 +51,5 @@ p {
 
 a {
     text-decoration: none;
-    color: white;
+    color: rgb(238, 255, 0);
 }
