--- a/CSS/competences.css
+++ b/CSS/competences.css
@@ -1,7 +1,7 @@
 #competence-gen{
     height : 90vh;
     text-align: center;
-    background-color: green;
+    background-color: rgb(59, 126, 59);
     margin-left: -8px;
     margin-right: -8px;
     margin-bottom: -22px;
@@ -19,7 +19,7 @@
 #competence-res{
     height : 90vh;
     text-align: center;
-    background-color: green;
+    background-color:green;
     margin-left: -8px;
     margin-right: -8px;
     
@@ -28,19 +28,17 @@
 table {
     margin-left: 25%;
     margin-right: 25%;
-    border:4px solid #641A02;
+    
     border-collapse: collapse;
     
 }
 
 .cell {
     text-align: left;
-    border:4px solid #641A02;
+    
 }
 
-.other-cell {
-    border-right: 4px solid #641A02;
-}
+
 
 #espace{
     height: 30px;
