--- a/CSS/main_project.css
+++ b/CSS/main_project.css
@@ -3,16 +3,18 @@
 	margin-right:-8px;
 	margin-bottom: -8px;
 	background-color: #FC7F3C;
+	
 }
 
 #description {
-    text-align : justify;
+	justify-content: center;
 	margin-left:25%;
 	margin-right:25%;
 	height:100vh;
 	align-items:center;
 	display :flex;
 	color:black;
+	
 	
 }
 
@@ -25,3 +27,4 @@
 	display :flex;
 	color:black;
 }
+
