--- a/CSS/Mentions_legales.css
+++ b/CSS/Mentions_legales.css
@@ -7,10 +7,10 @@
 	margin-right:-8px;
 	margin-bottom : -20px;
 	
-	background-color:white;
+	background-color:black;
 	
 }
 #ml {
 	text-decoration:none;
-	color:black;
+	color:white;
 }
