--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -1,5 +1,5 @@
  #navigation {
-	 background-color:#ffffff;
+	 background-color:black;
 	 height:65px;
 	 margin-left:-8px;
 	 margin-right:-8px;
@@ -26,8 +26,8 @@
 	 height:65px;
 	 border:none;
 	 margin-right:-4px;
-	 background-color:#ffffff;
-	 color:#000000;
+	 background-color:black;
+	 color:white;
 	 
  }
  #menu {
@@ -35,7 +35,7 @@
 	 width:100%;
  }
 .listemenu :hover {
-	background-color:#000000;
-	color:#ffffff;
+	background-color:white;
+	color:black;
 	
 }
