--- a/CSS/competences.css
+++ b/CSS/competences.css
@@ -35,6 +35,7 @@ table {
 
 .cell {
     text-align: left;
+    width:50%;
     
 }
 
@@ -47,13 +48,42 @@ table {
 	margin-left:25%;
 	margin-right:25%;
 	border-collapse: collapse;
+    
+    
+    
+	box-shadow: 0 0 15px rgba(0,0,0, 0.8);
+   -webkit-box-shadow: 0 0 15px rgba(0,0,0, 0.8);
+   -moz-box-shadow: 0 0 8px rgba(0,0,0, 0.8);
 }
 
 #espace{
-    height: 65px;
+    height: 45px;
     
 }
 
 td {
     background-color:#84D41D;
+}
+.white {
+    background-color: white;
+    border-left:10px solid white;
+    border-right:10px solid white;
+    text-align: justify;
+
+}
+
+.w {
+    background-color: white;
+}
+
+#green {
+    background-color:#84D41D;
+    margin-top:-9px;
+    height:270px;
+    
+}
+
+body {
+    margin:0px;
+    
 }
