--- a/CSS/main_project.css
+++ b/CSS/main_project.css
@@ -22,7 +22,7 @@
 	text-align : justify;
 	margin-left:25%;
 	margin-right:25%;
-	height:100vh;
+	height:auto;
 	align-items:center;
 	display :flex;
 	color:black;
