--- a/CSS/Accueil.css
+++ b/CSS/Accueil.css
@@ -32,6 +32,15 @@ p {
 	
 }
 
+#tabcomp {
+	height: 40px;
+	background-color: black;
+	color:white;
+	border:none;
+	width:180px;
+	
+}
+
 #accueil {
 	flex-grow: 3;
 	padding-top:10%;
@@ -64,7 +73,9 @@ img {
 	align-items:center;
 	display :flex;
 	color:black;
-	background-image: url("");
+	margin-bottom: 40px;
 	
 }
+
+
 
