--- a/CSS/competences.css
+++ b/CSS/competences.css
@@ -22,12 +22,12 @@
     
     margin-left: -8px;
     margin-right: -8px;
+    margin-bottom: 40px;
     
 }
 
 table {
-    margin-left: 25%;
-    margin-right: 25%;
+    margin:auto;
     
     border-collapse: collapse;
     
@@ -36,7 +36,7 @@ table {
 .cell {
     text-align: left;
     width:50%;
-    
+    border-bottom: 2px solid black;
 }
 
 .ligne {
@@ -79,11 +79,23 @@ td {
 #green {
     background-color:#84D41D;
     margin-top:-9px;
-    height:270px;
-    
+    height:400px;
+    margin-left: -8px;
+    margin-right: -8px;
 }
 
-body {
-    margin:0px;
-    
+.comp {
+    width:65%;
 }
+
+.right-main-cell {
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+}
+
+.left-main-cell {
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
+}
+
+
