--- a/CSS/Veille_technologique.css
+++ b/CSS/Veille_technologique.css
@@ -30,6 +30,9 @@ hr {
 	margin-left:25%;
 	margin-right:25%;
 	border-collapse: collapse;
+	box-shadow: 0 0 15px rgba(0,0,0, 0.8);
+   -webkit-box-shadow: 0 0 15px rgba(0,0,0, 0.8);
+   -moz-box-shadow: 0 0 8px rgba(0,0,0, 0.8);
 }
 
 .btn {
